--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
-<div>
-    <div class="col-md-4  offset-md-4">
-        <h2 class="text-center">編集する</h2>
-        <%= render 'form'%>
-    </div>  
-</div>
+<div class="container">
+  <div class="signup-form">
+    <i class="fas fa-list fa-1x"> 編集する </i>
+    <%= render 'form'%>
+  </div>
+</div>  
+
