--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,8 @@
-<div class = "container">
-    <div class="col-md-4  offset-md-4">
-        <h2 class="text-center">投稿する</h2>
-        <%= render 'form'%>
-    </div>  
+<div class="container">
+ <div class="signup-form">
+  <i class="fas fa-list fa-1x"> 新規投稿</i>
+  <%= render 'form'%>
+  </div>
 </div>
 
 
