--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,21 +1,18 @@
 <div class="container">
-  <% @entries.each do |e| %>
-    <% if e.user == current_user  %>
-    <%next%>
-    <%end%>
-    <h1><strong><a href="/users/<%= e.user.id %>"><%= e.user.name%>さん</a></strong></h1>
-  <% end %>
+   <div class="talk-title"> 
+      <i class="fas  fa-comment-dots">トーク</i>
+   </div>
+ <div class="talk">
   <div id="messages", data-room_id= "<%= @room.id %>">
-    <ul class="list-group">
-       <%= render @messages %>
-     </ul>
+    <%=render @messages%>
   </div>
-  <form  class="form-inline">
-<div class="form-group">
-<input type="text"  class="form-control"  id="chat-input">
-</div>
-<button id="button" class="btn btn-primary">送信</button>
-
-
-</form>
+  </div>
+    <div class="form">
+      <form  class="form-inline">
+        <div class="form-group">
+          <input type="text"  class="form-control"  id="chat-input">
+        </div>
+        <button id="button" class="btn btn-primary">送信</button>
+      </form>
+    </div>
 </div>
