--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,47 @@
-<div class="dance-background top">
-  <h1 class="display-3 ">Let's play dancing</h1>
-  <p class="lead">かっこいいダンサーになろう。</p>
+<div id="carouselExampleIndicators" class="carousel slide top-page" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <div class="top-page-title">
+        <h1>Let's dance</h1>
+        <h1>かっこいいダンサーになろう</h1>
+      </div>
+      <%=image_tag "top-page-bg1.jpg", class: "d-block w-100" ,alt: "First slide"  %>
+    </div>
+    <div class="carousel-item ">
+      <div class="top-page-title2">
+        <h1>Let's start Dancers</h1>
+        <h1>あこがれのダンサーを見つけよう</h1>
+      </div>
+      <%=image_tag "top-page-bg2.jpg", class: "d-block w-100" ,alt: "Second slide"  %>
+    </div>
+    <div class="carousel-item ">
+      <div class="top-page-title3">
+        <h1>Let's dance</h1>
+        <h1>おもいのたけをダンスにしよう</h1>
+      </div>
+      <%=image_tag "top-page-bg3.jpg", class: "d-block w-100" ,alt: "Third slide"  %>
+    </div>
+    <div class="carousel-item ">
+      <div class="top-page-title4">
+        <h1>Let's start Dancers</h1>
+        <h1>これまでの自分を更新しよう</h1>
+      </div>
+      <%=image_tag "top-page-bg4.jpg", class: "d-block w-100" ,alt: "Fourth slide"  %>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+
