--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,38 +1,42 @@
-<div class="container"
-<br>
-<br>
-<div class="btn-posts">
-<%= link_to '投稿する', new_post_path ,class: "btn btn-primary  "%>
+<div class="container clearfix">
+ <div class="posts-index-title">
+  <i class="fas fa-check fa-1x">投稿一覧から探す</i>
+ </div>
+  <% @posts.each do |post|%>
+    <div class="card float-left ">
+      <div class="info-tag clearfix">
+        <div class="info-genre float-left ">
+          <p><%= post.user.genre%></p>
+        </div>
+        <div class="info-address float-left ">
+          <p><%= post.user.address%></p>
+        </div>
+         <%if post.user.age%>
+         <div class="info-age float-left ">
+           <p><%= post.user.age%>才</p>
+        </div>
+        <%end%>
+      </div>
+       <%if post.user.image? %>
+        <%=image_tag post.user.image.thumb.url, class: "card-img-top" %>
+       <%else%>
+        <%= image_tag 'default.jpg', class: "card-img-top" %>
+       <%end%>
+      <h4 class="card-title"><%= link_to post.user.name, user_path(post.user) %></h4>
+        <div class="card-body">
+            <h5 class="card-text">
+             <%= post.condition%>をするかわりに<%=post.content%>   
+            </h5>
+            <%= link_to post_path(post), class: "btn btn-primary" do%>
+               もっと詳しく
+            <% end %>
+            <%= link_to post_likes_path(post, id:post.id) do %>
+               <i class="fas fa-heart fa-2x likes-count">
+                 <%=post.likes.count%>
+               </i>
+            <%end%>
+         </div>
+     </div>
+   <%end%>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <table class = "table table-hover">
-            <thead class="thead-light">
-                <tr> 
-                    <th>投稿一覧</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <% @posts.each do |post|%>
-              
-                <tr>                
-                     <th width = "100"><%=image_tag post.user.image.thumb100.url if post.user.image? %></th>
-                     <th width = "100"> <%= link_to post.user.name, user_path(post.user) %>
-                      <th width = "900">  <a href="/posts/<%= post.id %>"><span style="font-size:2em;"><%= post.condition%></span>をするかわりに<br><span style="font-size:2em;"><%=post.content%></span></a></th>
-                     
-                 </tr>
-                 
-                 <%end%>
-                
-            </tbody>
-            
-        </table>
-
-
-       
-    </div>
-</div>
-</div>
