--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(current_user.active_relationships.build, remote: true) do |f| %>
   <div><%= hidden_field_tag :followed_id, @user.id %></div>
-  <%= f.submit "フォロー", class: "btn btn-primary" %>
+  <%=button_tag type: 'submit', class: "follow-btn"  do %>
+     <i class="fas fa-user-plus">友達になる</i>
+  <%end%>
 <% end %>
