--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,5 +1,7 @@
 <%= form_for(current_user.active_relationships.find_by(followed_id: @user.id),
              html: { method: :delete },
              remote: true) do |f| %>
-  <%= f.submit "フォロー中", class: "btn" %>
+      <%=button_tag type: 'submit', class: "follow-btn"  do %>
+          <i class="fas fa-user-check"></i>
+      <%end%>
 <% end %>
