--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,101 +1,101 @@
-<div class="container login">
- <div class="row">
-<%= form_with model:@user, local: true do |f| %>
-   <div class="form-group">
-      <label>ニックネーム</label>
-      <%= f.text_field :name, class: "form-control" %>
-   </div>
+<div class="container ">
+ <div class="signup-form">
+    <%= form_with model:@user, local: true do |f| %>
+    <div class="form-group">
+        <label>ニックネーム</label>
+        <%= f.text_field :name, class: "form-control" %>
+    </div>
 
-   <div class="form-group">
-      <label>画像</label>
-      <%= f.file_field :image, class: "form_control" %>
-   </div>
+    <div class="form-group">
+        <label>画像</label>
+        <%= f.file_field :image, class: "form_control" %>
+    </div>
 
-  <div class="form-group">
-      <label>ジャンル</label>
-      <%= f.select :genre, [['Hiphop'], ['Jazz'],['Jazz Hip Hop / Street Jazz'],['House'],[ "Popin'"],["Lockin'"],['Soul'],['Freestyle']], {prompt: '選択してください'}, { id: "session_genre", class: "form_control" } %>       
-  </div>
+    <div class="form-group">
+        <label>ジャンル</label>
+        <%= f.select :genre, [['Hiphop'], ['Jazz'],['Jazz Hip Hop / Street Jazz'],['House'],[ "Popin'"],["Lockin'"],['Soul'],['Freestyle']], {prompt: '選択してください'}, { id: "session_genre", class: "form_control" } %>       
+    </div>
 
-  <div class="form-group">
-      <label>性別</label>
-      <%= f.radio_button :sex, :男性%>
-      <%= f.label :sex, "男性", {value: :男性, style: "display: inline-block;"} %>
-       <%= f.radio_button :sex ,:女性%>
-      <%= f.label :sex, "女性", {value: :女性, style: "display: inline-block;"} %>
-  </div>
-  <div class="form-group">
-      <label>年齢</label>
-      <%= f.text_field :age, class: "form-control" %>
-  </div>
-  <div class="form-group">
-      <label>居住地</label>
-    
-        <%= f.select :address ,
-         [["北海道"] ,
-         ["青森県"],
-         ["岩手県"] ,
-         ["宮城県"] ,
-         ["秋田県"] ,
-         ["山形県"] ,
-         ["福島県"] ,
-         ["茨城県"] ,
-         ["栃木県"] ,
-         ["群馬県" ],
-         ["埼玉県" ],
-         ["千葉県"] ,
-         ["東京都"] ,
-         ["神奈川県"],
-         ["新潟県"] ,
-         ["富山県"],
-         ["石川県"],
-         ["福井県"] ,
-         ["山梨県"] ,
-         ["長野県"] ,
-         ["岐阜県"] ,
-         ["静岡県"] ,
-         ["愛知県"] ,
-         ["三重県"] ,
-         ["滋賀県"] ,
-         ["京都府"] ,
-         ["大阪府"] ,
-         ["兵庫県"] ,
-         ["奈良県"] ,
-         ["和歌山県"],
-         ["島根県"] ,
-         ["鳥取県"] ,
-         ["岡山県"] ,
-         ["広島県"] ,
-         ["山口県"] ,
-         ["徳島県"] ,
-         ["香川県"] ,
-         ["愛媛県"] ,
-         ["高知県"] ,
-         ["福岡県"],
-         ["佐賀県"],
-         ["長崎県"],
-         ["熊本県"],
-         ["大分県"],
-         ["宮崎県"] ,
-         ["鹿児島県"],
-         ["沖縄県"]] ,{prompt: '選択してください'}, { id: "session_address", class: "form_control" }%>
-        </div>
-  <div class="form-group">
-      <label>紹介文</label>
-      <%= f.text_area :introduce, class: "form-control" %>
-  </div>
-  <div class="form-group">
-      <label>メールアドレス</label>
-      <%= f.email_field :email, class: "form-control" %>
-  </div>
+    <div class="form-group">
+        <label>性別</label>
+        <%= f.radio_button :sex, :男性%>
+        <%= f.label :sex, "男性", {value: :男性, style: "display: inline-block;"} %>
+        <%= f.radio_button :sex ,:女性%>
+        <%= f.label :sex, "女性", {value: :女性, style: "display: inline-block;"} %>
+    </div>
+    <div class="form-group">
+        <label>年齢</label>
+        <%= f.text_field :age, class: "form-control" %>
+    </div>
+    <div class="form-group">
+        <label>居住地</label>
         
+            <%= f.select :address ,
+            [["北海道"] ,
+            ["青森県"],
+            ["岩手県"] ,
+            ["宮城県"] ,
+            ["秋田県"] ,
+            ["山形県"] ,
+            ["福島県"] ,
+            ["茨城県"] ,
+            ["栃木県"] ,
+            ["群馬県" ],
+            ["埼玉県" ],
+            ["千葉県"] ,
+            ["東京都"] ,
+            ["神奈川県"],
+            ["新潟県"] ,
+            ["富山県"],
+            ["石川県"],
+            ["福井県"] ,
+            ["山梨県"] ,
+            ["長野県"] ,
+            ["岐阜県"] ,
+            ["静岡県"] ,
+            ["愛知県"] ,
+            ["三重県"] ,
+            ["滋賀県"] ,
+            ["京都府"] ,
+            ["大阪府"] ,
+            ["兵庫県"] ,
+            ["奈良県"] ,
+            ["和歌山県"],
+            ["島根県"] ,
+            ["鳥取県"] ,
+            ["岡山県"] ,
+            ["広島県"] ,
+            ["山口県"] ,
+            ["徳島県"] ,
+            ["香川県"] ,
+            ["愛媛県"] ,
+            ["高知県"] ,
+            ["福岡県"],
+            ["佐賀県"],
+            ["長崎県"],
+            ["熊本県"],
+            ["大分県"],
+            ["宮崎県"] ,
+            ["鹿児島県"],
+            ["沖縄県"]] ,{prompt: '選択してください'}, { id: "session_address", class: "form_control" }%>
+            </div>
+    <div class="form-group">
+        <label>好きな言葉、キャッチコピー</label>
+        <%= f.text_area :introduce, class: "form-control" %>
+    </div>
+    <div class="form-group">
+        <label>メールアドレス</label>
+        <%= f.email_field :email, class: "form-control" %>
+    </div>
+            
 
 
-  <div class="text-center">
-      <%= f.submit "編集", class: "btn btn-primary"%>
-  </div>
- <%end%>
+    <div class="text-center">
+        <%= f.submit "編集", class: "btn btn-primary"%>
+    </div>
+    <%end%>
 
-</div>
+ </div>
 </div>
 
 
