--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,33 @@
-<div class="container login">
- <div class="row">
+<div class="container">
+  <div class="signup-form">
    <%= form_with model:@user, local: true do |f| %>
      <div class="form-group">
-        <label>ニックネーム</label>
+        <p>ニックネーム</p>
         <%= f.text_field :name, class: "form-control" %>
      </div>
    <div class="form-group">
-      <label>ジャンル</label>
+      <p>ジャンル</p>
       <%= f.select :genre, [['Hiphop'], ['Jazz'],['Jazz Hip Hop / Street Jazz'],['House'],[ "Popin'"],["Lockin'"],['Soul'],['Freestyle']], {prompt: '選択してください'}, { id: "session_genre", class: "form_control" } %>       
    </div>
 
    <div class="form-group">
-      <label>画像</label>
+      <p>画像</p>
       <%= f.file_field :image %>
    </div>
    <div class="form-group">
-        <label>メールアドレス</label>
+        <p>メールアドレス</p>
         <%= f.text_field :email, class: "form-control", id: 'session_email'%>
    </div>
    <div class="form-group">
-      <label>パスワード<label>
+      <p>パスワード<p>
       <%= f.password_field :password, class: "form-control" , id: 'session_password'%>
   </div>
   <div class="form-group">
-      <label>パスワード(確認)<label>
+      <p>パスワード(確認)<p>
       <%= f.password_field :password_confirmation, class: "form-control", id: 'session_password'  %>
   </div>
   <div class="text-center">
-      <%= f.submit "ログイン", class: "btn btn-primary"%>
+      <%= f.submit "新規登録", class: "btn btn-primary signup-btn"%>
   </div>
  <%end%>
 
