--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,47 +1,33 @@
 <div class="container" >
+  <div class="follow-page">
+  <section class="user_info">
+    <h1><%= link_to @user.name, @user %></h1>
+  </section>
 
-<div class="row">
+  <section class="stats1">
+      <%= render 'shared/stats' %>
+  </section>
 
-    <section class="user_info">
-      <h1><%= link_to @user.name, @user %></h1>
-    </section>
-
-
-    <section class="stats1">
-       <%= render 'shared/stats' %>
-     </section>
-      <table class = "table table-hover">
       <% if @users.any? %>
-            <thead class="thead-light">
-               
-                <tr>
-                    <th colspan="3" ><%=@title %></th>
-                    
-                </tr>
-            </thead>
-            <tbody>
+         <div class="follow-title">
+           <i class="fas fa-user fa-1x"> <%=@title %></i>
+         </div>
+         <% @users.each do |user|%>
+           <div class="media follow-users">
+             <div class="d-flex mr-3">
+               <%if user.image? %>
+                 <%=image_tag user.image.thumb.url, class: "message-img-top"%>
+               <%else%>
+                 <%=image_tag 'default.jpg', class: "message-img-top"%>
+               <%end%>
+             </div>
+               <h3><%= link_to user.name, user_path(user) %></h3>
+           </div>
+         <% end %>
+       <%else%>
 
-                 <% @users.each do |user|%>
-              
-                    <tr>                
-                     <th width = "100"><%=image_tag user.image.thumb100.url if user.image? %></th>
-                     <th width = "100"> <%= link_to user.name, user_path(user) %>
-                      <th width = "900"> ジャンル：<%=user.genre %><br><%= user.introduce %></th>
-                    </tr>
-                  <% end %>
-
-            <%else%>
-            <thead class="thead-light">
-               
-            <tr>
-                <th ><%=@title %>はいません</th>
-                
-            </tr>
-        </thead>
-            <% end %>
-
-          </tbody>
-        </table>
-
-</div>
+    
+             <%=@title %>はいません
+       <% end %>
+    </div>
 </div>
